--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.7",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
